Implement basic graph node API