@@ -15,7 +15,7 @@
 
   <properties>
     <packaging>jar</packaging>
-    <jdk.version>16</jdk.version>
+    <jdk.version>17</jdk.version>
     <release.version>16</release.version>
     <micronaut.version>3.0.0</micronaut.version>
     <exec.mainClass>dev.vgerasimov.Application</exec.mainClass>
@@ -94,7 +94,35 @@
 
 
 
+    <dependency>
+      <groupId>io.micronaut.rxjava3</groupId>
+      <artifactId>micronaut-rxjava3</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
+      <scope>provided</scope>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>1.4.2.Final</version>
+    </dependency>
+
+
+
   </dependencies>
+
+
 
   <build>
     <plugins>
@@ -107,6 +135,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+
           <!-- Uncomment to enable incremental compilation -->
           <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
 
@@ -116,8 +145,20 @@
               <artifactId>micronaut-http-validation</artifactId>
               <version>${micronaut.version}</version>
             </path>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>1.4.2.Final</version>
+            </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>1.18.20</version>
+            </path>
           </annotationProcessorPaths>
+          <release>17</release>
           <compilerArgs>
+            <arg>--enable-preview</arg>
             <arg>-Amicronaut.processing.group=dev.vgerasimov</arg>
             <arg>-Amicronaut.processing.module=grafex</arg>
           </compilerArgs>
